# a-profiles

./: .coveragerc  .gitignore  .readthedocs.yaml  .travis.yml  404.html  CITATION.cff  README.md  __init__.py  dev.ipynb  dev_clouds.ipynb  dev_clouds_detection.ipynb  index.html  main.py  main_stats.txt  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  run_day.py  setup.py  sitemap.xml
.github/workflows/: black.yml  ci.yml  codecov.yml  doc.yml  docs.yml  python-app.yml  update-doc.yml
api/: index.html
api/data_classes/: index.html
api/detection/: index.html
api/plotting/: index.html
api/reading/: index.html
api/retrieval/: index.html
api/simulation/: index.html
api/writing/: index.html
aprofiles/: __init__.py  aer_properties.json  aeronet.py  emc.py  mec.py  plotter.py  profiles.py  profiles_data.py  profilesdata.py  rayleigh.py  rayleigh_data.py  reader.py  size_distribution.py  utils.py
aprofiles.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
aprofiles/cli/: __init__.py  apro.py  aprocess.py
aprofiles/cli/config/: alc_parameters.json  cfg.json
aprofiles/cli/utils/: __init__.py  calendar.py  climatology.py  config.py  json_calendar.py  json_climatology.py  json_map.py  l2b.py  map.py  workflow.py
aprofiles/config/: aer_ifs.json  aer_ifs.json.bak
aprofiles/detection/: __init__.py  clouds.py  foc.py  ml_clouds.py  pbl.py
aprofiles/detection/ml_models/: encoder.keras
aprofiles/inversion/: aerosol.py  aerosols.py  ref_altitude.py
aprofiles/io/: read_aeronet.py  read_eprofile.py  reader.py  write_netcdf.py  write_profiles.py
aprofiles/plot/: __init__.py  image.py  profile.py  timeseries.py
aprofiles/retrieval/: extinction.py  mass_conc.py  ref_altitude.py
aprofiles/simulation/: ext2back.py
assets/images/: A-Profiles.xcf
assets/js/: custom.js
changelog/: index.html
cli/: __init__.py  aprocess.py  index.html
cli/config/: cfg.json
cli/utils/: config.py  json_calendar.py  json_climatology.py  json_map.py  workflow.py
data/: e-profile
docs/: _config.yml  api.md  api.rst  changelog.md  changelog.rst  cli.md  cli.rst  conf.py  examples.md  examples.rst  index.html  index.md  index.rst  installation.md  installation.rst  introduction.rst  requirements.txt
docs/_build/doctrees/: api copy.doctree  api.doctree  changelog.doctree  environment.pickle  examples.doctree  index.doctree  installation.doctree  introduction.doctree
docs/_build/doctrees/api/: data_classes.doctree  detection.doctree  plotting.doctree  reader.doctree  retrieval.doctree  writing.doctree
docs/_build/doctrees/source/: getting_started.doctree  introduction.doctree
docs/_build/html/: .buildinfo  api copy.html  api.html  changelog.html  examples.html  genindex.html  index.html  installation.html  introduction.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html
docs/_build/html/_sources/: api copy.rst.txt  api.rst.txt  examples.rst.txt  index.rst.txt  installation.rst.txt  introduction.rst.txt
docs/_build/html/api/: data_classes.html  detection.html  plotting.html  reader.html  retrieval.html  writing.html
docs/_build/html/source/: getting_started.html  introduction.html
docs/_static/css/: custom.css  custom.min.css
docs/_static/images/: A-Profiles.xcf
docs/_static/js/: custom.js  custom.min.js
docs/api/: data_classes.md  data_classes.rst  detection.md  detection.rst  plotting.md  reader.md  reader.rst  reading.md  retrieval.md  simulation.md  simulation.rst  writing.md
docs/assets/css/: custom.css
docs/assets/images/: attenuated_backscatter.png,tmp
docs/assets/js/: katex.js
docs/source/api/: index.rst  plotter.rst  profilesdata.rst
docs/source/getting-started/: installation.rst
examples/: 01_data_reading.py  02_01_extrapolation.py  02_02_gaussian_filtering.py  03_01_foc.py  03_02_clouds.py  03_03_pbl.py  04_01_extinction.py  04_02_mass_concentration.py  index.html
examples/data/: L2_0-20000-001492_A20210909.nc
installation/: index.html
run/: __init__.py  aprorun  aprorun.py  singleday_multithread.py  singleday_pool.py  singleday_series.py
run/utils/: __init__.py  json_calendar.py  json_map.py  workflow.py
search/: search_index.json
test.nc/2021/09/09/: 0-20000-0-01492-2021-09-09.nc
tests/: __init__.py  test_emc.py  test_mec.py  test_profiles.py  test_rayleigh.py  test_read_eprofile.py  test_reade_eprofile.py  test_reader.py  test_size_distribution.py  test_utils.py
tests/data/: L2_0-20000-006735_A20210908.nc
tests/detection/: test_clouds.py  test_foc.py  test_pbl.py
tests/io/: test_read_eprofile.py  test_write_profiles.py
tests/simulation/: test_ext2back.py
(+51 files in other folders)
