[tool.poetry]
name = "aprofiles"
version = "0.12.0"
description = "Analysis of atmospheric profilers measurements"
authors = ["augustinm <augustinm@met.no>"]
license = "GPL-3.0"

[tool.poetry.scripts]
apro = "aprofiles.cli.apro:app"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
matplotlib = "^3.8.0,<3.9"
miepython = "^2.2.1"
netCDF4 = "^1.5.8"
numpy = ">=1.22,<2.1"
seaborn = "^0.13.0"
scipy = "^1.7.2"
xarray = "^v2024.09.0"
orjson = "^3.10.7"
dask = "^2024.9.0"
numba = "^0.60.0"
rich = "^13.8.1"
scikit-image = "^0.25.1"
tensorflow = "^2.18.0"
joblib = "^1.4.2"
scikit-learn = "^1.6.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
black = "^24.8.0"
ipykernel = "^6.5.1"
pytest-cov = "^3.0.0"
ipython = "^8.27.0"
pymdown-extensions = "^10.10"
ipywidgets = "^8.1.5"

[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.6.2"
mkdocs-autorefs = "^1.3.0"
mkdocs-copy = "^0.0.1"
pymdown-extensions = "^10.14.3"
mkdocstrings = "^0.28.0"
markdown-include = "^0.8.1"
mkdocstrings-python = "^1.14.3"

[tool.poetry.group.cli.dependencies]
typer = "^0.15.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
