[tool.poetry]
name = "aprofiles"
version = "0.13.3"
description = "Analysis of atmospheric profilers measurements"
authors = ["augustinm <augustinm@met.no>"]
license = "GPL-3.0"

[tool.poetry.scripts]
apro = "aprofiles.cli.apro:app"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
matplotlib = "^3.8.0,<3.9"
miepython = "^2.2.1"
netCDF4 = "^1.5.8"
numpy = ">=1.22,<2.1"
seaborn = "^0.13.0"
scipy = "^1.7.2"
xarray = "^v2024.09.0"
orjson = "^3.10.7"
dask = "^2024.9.0"
numba = "^0.60.0"
rich = "^13.8.1"
scikit-image = "^0.25.1"
tensorflow = "^2.18.0"
joblib = "^1.4.2"
scikit-learn = "^1.6.1"

# Optional cli, dev and docs dependencies
typer = { version = "^0.15.1", optional = true }
pytest = { version = "^8.3.3", optional = true }
black = { version = "^24.8.0", optional = true }
ipykernel = { version = "^6.5.1", optional = true }
pytest-cov = { version = "^3.0.0", optional = true }
ipython = { version = "^8.27.0", optional = true }
pymdown-extensions = { version = "^10.10", optional = true }
ipywidgets = { version = "^8.1.5", optional = true }

mkdocs-material = { version = "^9.6.2", optional = true }
mkdocs-autorefs = { version = "^1.3.0", optional = true }
mkdocs-copy = { version = "^0.0.1", optional = true }
mkdocstrings = { version = "^0.28.0", optional = true }
markdown-include = { version = "^0.8.1", optional = true }
mkdocstrings-python = { version = "^1.14.3", optional = true }

# Define extras for pip compatibility
[tool.poetry.extras]
dev = ["pytest", "black", "ipykernel", "pytest-cov", "ipython", "pymdown-extensions", "ipywidgets"]
docs = ["mkdocs-material", "mkdocs-autorefs", "mkdocs-copy", "mkdocstrings", "markdown-include", "mkdocstrings-python"]
cli = ["typer"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"