[project]
name = "aprofiles"
version = "0.15.0"
description = "Analysis of atmospheric profilers measurements"
authors = [{ name = "augustinm", email = "augustinm@met.no" }]
requires-python = ">=3.10,<3.14"
license = "GPL-3.0-or-later"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]
dependencies = [
    "matplotlib>=3.8.0,<4,<3.9",
    "miepython>=2.2.1,<3",
    "netCDF4>=1.5.8,<2",
    "numpy>=1.22",
    "seaborn>=0.13.0,<0.14",
    "scipy>=1.7.2,<2",
    "xarray>=2024.9.0,<2025",
    "orjson>=3.10.7,<4",
    "dask>=2024.9.0,<2025",
    "numba>=0.61.0",
    "rich>=13.8.1,<14",
    "scikit-image>=0.25.1,<0.26",
    "tensorflow>=2.20.0",
    "joblib>=1.4.2,<2",
    "scikit-learn>=1.6.1,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.3,<9",
    "black>=24.8.0,<25",
    "ipykernel>=6.5.1,<7",
    "pytest-cov>=3.0.0,<4",
    "ipython>=8.27.0,<9",
    "pymdown-extensions>=10.10,<11",
    "ipywidgets>=8.1.5,<9",
]
docs = [
    "mkdocs-material>=9.6.2,<10",
    "mkdocs-autorefs>=1.3.0,<2",
    "mkdocs-copy>=0.0.1,<0.0.2",
    "mkdocstrings>=0.28.0,<0.29",
    "markdown-include>=0.8.1,<0.9",
    "mkdocstrings-python>=1.14.3,<2",
]
cli = ["typer>=0.15.1,<0.16"]

[project.scripts]
apro = "aprofiles.cli.apro:app"

[tool.uv]

[tool.uv.build-backend]
module-root = ""

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"
